--- a/M4TH3C/nbproject/project.properties
+++ b/M4TH3C/nbproject/project.properties
@@ -37,10 +37,13 @@ endorsed.classpath=
 excludes=
 file.reference.compilerTools-2.3.7.jar=D:\\SEMESTRE 6\\LENGUAJES Y AUTOMATAS I\\UNIDAD 4\\compilerTools-2.3.7.jar
 file.reference.compilerTools-2.3.7.jar-1=D:\\SEMESTRE 7\\10-11 LENGUAJES Y AUTOMATAS II\\PROYECTO\\HERRAMIENTAS\\compilerTools-2.3.7.jar
+file.reference.compilerTools-2.3.7.jar-2=..\\compilerTools-2.3.7.jar
 file.reference.flatlaf-2.2.jar=D:\\SEMESTRE 6\\LENGUAJES Y AUTOMATAS I\\UNIDAD 4\\flatlaf-2.2.jar
 file.reference.flatlaf-2.2.jar-1=D:\\SEMESTRE 7\\10-11 LENGUAJES Y AUTOMATAS II\\PROYECTO\\HERRAMIENTAS\\flatlaf-2.2.jar
+file.reference.flatlaf-2.2.jar-2=..\\flatlaf-2.2.jar
 file.reference.jflex-full-1.8.2.jar=D:\\SEMESTRE 6\\LENGUAJES Y AUTOMATAS I\\UNIDAD 4\\jflex-full-1.8.2.jar
 file.reference.jflex-full-1.8.2.jar-1=D:\\SEMESTRE 7\\10-11 LENGUAJES Y AUTOMATAS II\\PROYECTO\\HERRAMIENTAS\\jflex-full-1.8.2.jar
+file.reference.jflex-full-1.8.2.jar-2=..\\jflex-full-1.8.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -52,7 +55,10 @@ javac.classpath=\
     ${file.reference.jflex-full-1.8.2.jar}:\
     ${file.reference.compilerTools-2.3.7.jar-1}:\
     ${file.reference.flatlaf-2.2.jar-1}:\
-    ${file.reference.jflex-full-1.8.2.jar-1}
+    ${file.reference.jflex-full-1.8.2.jar-1}:\
+    ${file.reference.compilerTools-2.3.7.jar-2}:\
+    ${file.reference.flatlaf-2.2.jar-2}:\
+    ${file.reference.jflex-full-1.8.2.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
