--- a/M4TH3C/nbproject/private/private.properties
+++ b/M4TH3C/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 compile.on.save=true
-do.depend=false
+do.depend=true
 do.jar=true
 do.jlink=false
 file.reference.compilerTools-2.3.7.jar=C:\\Users\\Jesus\\Documents\\GitHub\\compilerTools-2.3.7.jar
