--- a/M4TH3C/nbproject/project.properties
+++ b/M4TH3C/nbproject/project.properties
@@ -4,7 +4,8 @@ annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=M4TH3C
-application.vendor=Carlos
+application.vendor=Jesus
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -38,14 +39,19 @@ excludes=
 file.reference.compilerTools-2.3.7.jar=D:\\SEMESTRE 6\\LENGUAJES Y AUTOMATAS I\\UNIDAD 4\\compilerTools-2.3.7.jar
 file.reference.compilerTools-2.3.7.jar-1=D:\\SEMESTRE 7\\10-11 LENGUAJES Y AUTOMATAS II\\PROYECTO\\HERRAMIENTAS\\compilerTools-2.3.7.jar
 file.reference.compilerTools-2.3.7.jar-2=..\\compilerTools-2.3.7.jar
+file.reference.compilerTools-2.3.7.jar-3=D:\\SEMESTRE 7\\10-11 LENGUAJES Y AUTOMATAS II\\PROYECTO\\HERRAMIENTAS\\compilerTools-2.3.7.jar
 file.reference.flatlaf-2.2.jar=D:\\SEMESTRE 6\\LENGUAJES Y AUTOMATAS I\\UNIDAD 4\\flatlaf-2.2.jar
 file.reference.flatlaf-2.2.jar-1=D:\\SEMESTRE 7\\10-11 LENGUAJES Y AUTOMATAS II\\PROYECTO\\HERRAMIENTAS\\flatlaf-2.2.jar
 file.reference.flatlaf-2.2.jar-2=..\\flatlaf-2.2.jar
+file.reference.flatlaf-2.2.jar-3=D:\\SEMESTRE 7\\10-11 LENGUAJES Y AUTOMATAS II\\PROYECTO\\HERRAMIENTAS\\flatlaf-2.2.jar
 file.reference.jflex-full-1.8.2.jar=D:\\SEMESTRE 6\\LENGUAJES Y AUTOMATAS I\\UNIDAD 4\\jflex-full-1.8.2.jar
 file.reference.jflex-full-1.8.2.jar-1=D:\\SEMESTRE 7\\10-11 LENGUAJES Y AUTOMATAS II\\PROYECTO\\HERRAMIENTAS\\jflex-full-1.8.2.jar
 file.reference.jflex-full-1.8.2.jar-2=..\\jflex-full-1.8.2.jar
+file.reference.jflex-full-1.8.2.jar-3=D:\\SEMESTRE 7\\10-11 LENGUAJES Y AUTOMATAS II\\PROYECTO\\HERRAMIENTAS\\jflex-full-1.8.2.jar
 includes=**
-jar.compress=false
+jar.archive.disabled=${jnlp.enabled}
+jar.compress=true
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.jFlex.classpath}:\
     ${libs.Tools.classpath}:\
@@ -58,10 +64,13 @@ javac.classpath=\
     ${file.reference.jflex-full-1.8.2.jar-1}:\
     ${file.reference.compilerTools-2.3.7.jar-2}:\
     ${file.reference.flatlaf-2.2.jar-2}:\
-    ${file.reference.jflex-full-1.8.2.jar-2}
+    ${file.reference.jflex-full-1.8.2.jar-2}:\
+    ${file.reference.compilerTools-2.3.7.jar-3}:\
+    ${file.reference.flatlaf-2.2.jar-3}:\
+    ${file.reference.jflex-full-1.8.2.jar-3}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
-javac.deprecation=false
+javac.deprecation=true
 javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
@@ -94,10 +103,27 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=M4TH3C
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=CODIGO.Principal
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
+mkdist.disabled=true
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
