--- a/M4TH3C/nbproject/private/private.properties
+++ b/M4TH3C/nbproject/private/private.properties
@@ -2,13 +2,19 @@ compile.on.save=true
 do.depend=true
 do.jar=true
 do.jlink=false
-file.reference.compilerTools-2.3.7.jar=C:\\Users\\Jesus\\Documents\\GitHub\\compilerTools-2.3.7.jar
-file.reference.compilerTools-2.3.7.jar-1=C:\\Users\\Jesus\\Documents\\GitHub\\compilerTools-2.3.7.jar
-file.reference.flatlaf-2.2.jar=C:\\Users\\Jesus\\Documents\\GitHub\\flatlaf-2.2.jar
-file.reference.flatlaf-2.2.jar-1=C:\\Users\\Jesus\\Documents\\GitHub\\flatlaf-2.2.jar
-file.reference.jflex-full-1.8.2.jar=C:\\Users\\Jesus\\Documents\\GitHub\\jflex-full-1.8.2.jar
-file.reference.jflex-full-1.8.2.jar-1=C:\\Users\\Jesus\\Documents\\GitHub\\jflex-full-1.8.2.jar
+file.reference.compilerTools-2.3.7.jar=C:\\Users\\Jesus\\Desktop\\PROYECTO\\HERRAMIENTAS\\compilerTools-2.3.7.jar
+file.reference.compilerTools-2.3.7.jar-1=C:\\Users\\Jesus\\Desktop\\PROYECTO\\HERRAMIENTAS\\compilerTools-2.3.7.jar
+file.reference.compilerTools-2.3.7.jar-2=C:\\Users\\Jesus\\Desktop\\PROYECTO\\HERRAMIENTAS\\compilerTools-2.3.7.jar
+file.reference.compilerTools-2.3.7.jar-3=C:\\Users\\Jesus\\Desktop\\PROYECTO\\HERRAMIENTAS\\compilerTools-2.3.7.jar
+file.reference.flatlaf-2.2.jar=C:\\Users\\Jesus\\Desktop\\PROYECTO\\HERRAMIENTAS\\flatlaf-2.2.jar
+file.reference.flatlaf-2.2.jar-1=C:\\Users\\Jesus\\Desktop\\PROYECTO\\HERRAMIENTAS\\flatlaf-2.2.jar
+file.reference.flatlaf-2.2.jar-2=C:\\Users\\Jesus\\Desktop\\PROYECTO\\HERRAMIENTAS\\flatlaf-2.2.jar
+file.reference.flatlaf-2.2.jar-3=C:\\Users\\Jesus\\Desktop\\PROYECTO\\HERRAMIENTAS\\flatlaf-2.2.jar
+file.reference.jflex-full-1.8.2.jar=C:\\Users\\Jesus\\Desktop\\PROYECTO\\HERRAMIENTAS\\jflex-full-1.8.2.jar
+file.reference.jflex-full-1.8.2.jar-1=C:\\Users\\Jesus\\Desktop\\PROYECTO\\HERRAMIENTAS\\jflex-full-1.8.2.jar
+file.reference.jflex-full-1.8.2.jar-2=C:\\Users\\Jesus\\Desktop\\PROYECTO\\HERRAMIENTAS\\jflex-full-1.8.2.jar
+file.reference.jflex-full-1.8.2.jar-3=C:\\Users\\Jesus\\Desktop\\PROYECTO\\HERRAMIENTAS\\jflex-full-1.8.2.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\chuy4\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\Jesus\\AppData\\Roaming\\NetBeans\\15\\build.properties
