--- a/M4TH3C/nbproject/private/private.properties
+++ b/M4TH3C/nbproject/private/private.properties
@@ -17,4 +17,4 @@ file.reference.jflex-full-1.8.2.jar-3=C:\\Users\\Jesus\\Desktop\\PROYECTO\\HERRA
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Jesus\\AppData\\Roaming\\NetBeans\\15\\build.properties
+user.properties.file=C:\\Users\\chuy4\\AppData\\Roaming\\NetBeans\\13\\build.properties
