--- a/M4TH3C/nbproject/project.properties
+++ b/M4TH3C/nbproject/project.properties
@@ -42,18 +42,21 @@ file.reference.compilerTools-2.3.7.jar-2=..\\compilerTools-2.3.7.jar
 file.reference.compilerTools-2.3.7.jar-3=D:\\SEMESTRE 7\\10-11 LENGUAJES Y AUTOMATAS II\\PROYECTO\\HERRAMIENTAS\\compilerTools-2.3.7.jar
 file.reference.compilerTools-2.3.7.jar-4=D:\\SEMESTRE 7\\10-11 LENGUAJES Y AUTOMATAS II\\PROYECTO\\HERRAMIENTAS\\compilerTools-2.3.7.jar
 file.reference.compilerTools-2.3.7.jar-5=D:\\SEMESTRE 7\\10-11 LENGUAJES Y AUTOMATAS II\\PROYECTO\\HERRAMIENTAS\\compilerTools-2.3.7.jar
+file.reference.compilerTools-2.3.7.jar-6=src\\LIBRERIAS\\compilerTools-2.3.7.jar
 file.reference.flatlaf-2.2.jar=D:\\SEMESTRE 6\\LENGUAJES Y AUTOMATAS I\\UNIDAD 4\\flatlaf-2.2.jar
 file.reference.flatlaf-2.2.jar-1=D:\\SEMESTRE 7\\10-11 LENGUAJES Y AUTOMATAS II\\PROYECTO\\HERRAMIENTAS\\flatlaf-2.2.jar
 file.reference.flatlaf-2.2.jar-2=..\\flatlaf-2.2.jar
 file.reference.flatlaf-2.2.jar-3=D:\\SEMESTRE 7\\10-11 LENGUAJES Y AUTOMATAS II\\PROYECTO\\HERRAMIENTAS\\flatlaf-2.2.jar
 file.reference.flatlaf-2.2.jar-4=D:\\SEMESTRE 7\\10-11 LENGUAJES Y AUTOMATAS II\\PROYECTO\\HERRAMIENTAS\\flatlaf-2.2.jar
 file.reference.flatlaf-2.2.jar-5=D:\\SEMESTRE 7\\10-11 LENGUAJES Y AUTOMATAS II\\PROYECTO\\HERRAMIENTAS\\flatlaf-2.2.jar
+file.reference.flatlaf-2.2.jar-6=src\\LIBRERIAS\\flatlaf-2.2.jar
 file.reference.jflex-full-1.8.2.jar=D:\\SEMESTRE 6\\LENGUAJES Y AUTOMATAS I\\UNIDAD 4\\jflex-full-1.8.2.jar
 file.reference.jflex-full-1.8.2.jar-1=D:\\SEMESTRE 7\\10-11 LENGUAJES Y AUTOMATAS II\\PROYECTO\\HERRAMIENTAS\\jflex-full-1.8.2.jar
 file.reference.jflex-full-1.8.2.jar-2=..\\jflex-full-1.8.2.jar
 file.reference.jflex-full-1.8.2.jar-3=D:\\SEMESTRE 7\\10-11 LENGUAJES Y AUTOMATAS II\\PROYECTO\\HERRAMIENTAS\\jflex-full-1.8.2.jar
 file.reference.jflex-full-1.8.2.jar-4=D:\\SEMESTRE 7\\10-11 LENGUAJES Y AUTOMATAS II\\PROYECTO\\HERRAMIENTAS\\jflex-full-1.8.2.jar
 file.reference.jflex-full-1.8.2.jar-5=D:\\SEMESTRE 7\\10-11 LENGUAJES Y AUTOMATAS II\\PROYECTO\\HERRAMIENTAS\\jflex-full-1.8.2.jar
+file.reference.jflex-full-1.8.2.jar-6=src\\LIBRERIAS\\jflex-full-1.8.2.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
@@ -79,7 +82,10 @@ javac.classpath=\
     ${file.reference.jflex-full-1.8.2.jar-4}:\
     ${file.reference.compilerTools-2.3.7.jar-5}:\
     ${file.reference.flatlaf-2.2.jar-5}:\
-    ${file.reference.jflex-full-1.8.2.jar-5}
+    ${file.reference.jflex-full-1.8.2.jar-5}:\
+    ${file.reference.compilerTools-2.3.7.jar-6}:\
+    ${file.reference.flatlaf-2.2.jar-6}:\
+    ${file.reference.jflex-full-1.8.2.jar-6}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=true
